Fix flickering hover hightlight

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -31,7 +31,7 @@ svg {
 
 #wedding circle { fill: #2196f3; }
 
-use {
+use:hover {
    stroke: #2196f3;
    stroke-width: 4;
    filter: url(#hover-blur);
